Fixed horizontal scroll.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2023,3 +2023,8 @@ div.post-series {
   border: solid #DDDDDD;
   border-width: thin;
 }
+
+section div.row {
+  margin-left: 0;
+  margin-right: 0;
+}
